--- a/PASOEContent/WEB-INF/openedge/SalesmanCustomersData.cls
+++ b/PASOEContent/WEB-INF/openedge/SalesmanCustomersData.cls
@@ -192,6 +192,11 @@ CLASS SalesmanCustomersData:
                                        OUTPUT TABLE ttCustBillingAddress,
                                        OUTPUT cError        AS CHARACTER,
                                        OUTPUT opiStatusCode AS INTEGER):
+                                           
+    MESSAGE "cCustNumber " cCustNumber SKIP
+            "ipcCompanyID " ipcCompanyID SKIP
+            "ipcLangID " ipcLangID SKIP 
+    VIEW-AS ALERT-BOX.                                       
 	     
     DEFINE VARIABLE deTotalAmtOverdue AS DECIMAL   NO-UNDO.
     DEFINE VARIABLE deAvailCredit     AS DECIMAL   NO-UNDO.
@@ -221,8 +226,10 @@ CLASS SalesmanCustomersData:
     objCommonSrc    = NEW CommonSource(INPUT cToken).
     custOpenOrdrObj = NEW CustomerOrders(INPUT cToken).
                                       	
-    FOR FIRST CCSMS WHERE CCSMS.CUST-NUMBER EQ cCustNumber NO-LOCK:
+    FOR FIRST CCSMS WHERE CCSMS.CUST-NUMBER EQ TRIM(cCustNumber) NO-LOCK:
      
+     MESSAGE "cCustNumber " cCustNumber
+     VIEW-AS ALERT-BOX.
       /* FOR EACH COOHD WHERE 
 	    COOHD.CUST-NUMBER EQ CCSMS.CUST-NUMBER 
 	    NO-LOCK BY COOHD.ORDER-DATE :
